--- a/src/style.css
+++ b/src/style.css
@@ -12,36 +12,77 @@
 .slideshow .slider {
     width: 100vw;
     height: 100vw;
+    overflow: hidden;
     z-index: 2;
-    transition: transform 1s ease;
+    transition: transform 0.8s ease;
 }
 
-.slideshow .slider * {
-    outline: none;
+.slideshow .slider .slide {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: none;
+    transition: transform 1s ease-in-out;
+}
+
+.slideshow .slider .slide.left {
+    left: 0;
+}
+
+.slideshow .slider .slide.right {
+    right: 0;
+}
+
+.slideshow .slider .slide.active {
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+}
+
+.slideshow .slider .slide.right.previous {
+    transform: translateY(-150%);
+    display: flex;
+}
+
+.slideshow .slider .slide.right.next {
+    transform: translateY(50%);
+    display: flex;
+}
+
+.slideshow .slider .slide.left.previous {
+    transform: translateY(50%);
+    display: flex;
+}
+
+.slideshow .slider .slide.left.next {
+    transform: translateY(-150%);
+    display: flex;
 }
 
 .slideshow .slider .item {
     height: 100vh;
-    width: 100vw;
+    width: 50vw;
     position: relative;
     overflow: hidden;
     border: none;
-    opacity: 0;
-    transition: opacity 1s ease;
 }
 
 .slideshow .slider .item img {
-    min-width: 101%;
-    min-height: 101%;
+    width: 200%;
+    /* min-height: 100%; */
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
 }
 
-.slideshow .slider .item.active {
-    opacity: 1;
+.slideshow .slider .left img {
+    left: 0;
 }
+
+.slideshow .slider .right img {
+    right: 0;
+}
+
 
 .slideshow-text {
     position: absolute;
@@ -70,7 +111,7 @@
     width: 100%;
     transform: translateX(-50%) translateY(-50%);
     opacity: 0;
-    transition: transform 0.5s ease-in-out, opacity 1.2s ease;
+    transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
 }
 
 .slideshow-text .item.active {
@@ -84,7 +125,7 @@
 }
 
 .slideshow-text .item.next {
-    transform: translateY(100%);
+    transform: translateY(50%);
     opacity: 0;
 }
 
@@ -107,13 +148,11 @@
     width: 60%;
     cursor: pointer;
     transition: width 0.8s ease;
-    /* Added transition */
 }
 
 .dot-line.active {
     width: 100%;
     transition: width 1s ease;
-    /* Added transition */
 }
 
 .up-btn, .down-btn {
