--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.dummy {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    font-size: 48px;
+    text-align: center;
+}
