--- a/src/style.css
+++ b/src/style.css
@@ -89,42 +89,58 @@
     transform: translate(-50%, -50%);
     z-index: 100;
     width: 100%;
-    height: 64px;
-    overflow: hidden;
     text-align: center;
-    font-size: 80px;
     color: #fff;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 200;
     pointer-events: none;
-    text-transform: uppercase;
-    letter-spacing: 20px;
-    line-height: 0.8;
 }
 
 .slideshow-text .item {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    transform: translateX(-50%) translateY(-50%);
-    opacity: 0;
-    transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
+    height: 64px;
+    overflow: hidden;
 }
 
-.slideshow-text .item.active {
-    transform: translateY(-50%);
+.slideshow-text .item h1 {
+    letter-spacing: 20px;
+    line-height: 0.8;
+    font-size: 80px;
+    text-transform: uppercase;
+    width: 100%;
+    opacity: 0;
+    transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
+
+}
+
+.slideshow-text .item h1.active {
+    transform: translateY(0%);
     opacity: 1;
 }
 
-.slideshow-text .item.previous {
-    transform: translateY(-150%);
+.slideshow-text .item h1.previous {
+    transform: translateY(-100%);
     opacity: 0;
 }
 
-.slideshow-text .item.next {
-    transform: translateY(50%);
+.slideshow-text .item h1.next {
+    transform: translateY(100%);
     opacity: 0;
+}
+
+.slideshow-text .description {
+    opacity: 0;
+    transition: transform 0.5s ease-in-out, opacity 1s ease-in-out;
+}
+
+.slideshow-text .description.active {
+    opacity: 1;
+}
+
+.slideshow-text .description p {
+    max-width: 600px;
+    margin: auto;
+    padding: 16px;
+    line-height: 1.2;
 }
 
 .dots {
